# masonc

./: .gitignore  CMakeLists.txt  LICENSE-3RD-PARTY.txt  LICENSE-THIRD-PARTY.txt  LICENSE.txt  README.md  README.txt  syntax.txt
Tests/: language.mason  language2.mason  lex.mason  test.mason
Tests/Error/: error_3.mason  error_6.mason  error_7.mason
Tests/Pass/: pass_1.mason  pass_2.mason  pass_3.mason
Tests/fail/: fail_4.mason  fail_9.mason
Tests/mason/: test.mason
documentation/: .gitignore  1_hello_world.mason  2_packages_and_imports.mason  3_built_in_types.mason  4_variable_declaration.mason  5_structures.mason  6_procedures.mason  7_optional.mason  mason-specification.tex
include/: common.h  file_io.h  lang.h  lexer.h  parser.h  smap.h  stack.h  string_builder.h  text.h
masonc_vs/: binary_operator.hpp  build.cpp  build.hpp  command.cpp  command.hpp  common.cpp  common.hpp  io.cpp  io.hpp  lang.cpp  lang.hpp  lexer.cpp  lexer.hpp  linker.cpp  linker.hpp  llvm_converter.cpp  llvm_converter.hpp  log.hpp  main.cpp  message.cpp  message.hpp  package.cpp  package.hpp  parser.cpp  parser.hpp  scope.cpp  scope.hpp  source_file.cpp  source_file.hpp  string_collection.cpp  string_collection.hpp  symbol.hpp  test.cpp  test.hpp  timer.cpp  timer.hpp
source/: binary_operator.cpp  build.cpp  build.hpp  build_stage.cpp  build_stage.hpp  command.cpp  command.hpp  common.cpp  common.hpp  io.cpp  lang.cpp  lexer.cpp  lexer.hpp  linker.cpp  linker.hpp  llvm_converter.cpp  llvm_converter.hpp  location.hpp  log.cpp  main.cpp  message.cpp  message.hpp  package.hpp  scope.cpp  symbol.hpp  type.hpp  version.hpp
source/dead/: dependency_graph.hpp  digraph.hpp  matrix.hpp  test_dependency_graph.cpp  test_dependency_graph.hpp
source/language/: binary_operator.cpp  binary_operator.hpp  lang.cpp  lang.hpp  language.cpp  language.hpp  mod.cpp  mod.hpp  mod_handle.hpp  module.cpp  module.hpp  module_handle.hpp  package.cpp  package.hpp  package_handle.hpp  scope.cpp  scope.hpp  symbol.hpp  type.hpp
source/lexer/: lexer.cpp  lexer.hpp  location.hpp
source/parser/: parser.cpp  parser.hpp  parser_expressions.hpp
source/test/: test.cpp  test.hpp  test_dependency_graph.cpp  test_dependency_graph.hpp  test_dependency_list.cpp  test_dependency_list.hpp  test_iterator.cpp  test_iterator.hpp  test_misc.cpp  test_misc.hpp  test_parser.cpp  test_parser.hpp  test_type_util.cpp  test_type_util.hpp
source/util/: containers.hpp  cstring_collection_basic.hpp  cstring_util.cpp  cstring_util.hpp  dependency_graph.hpp  dependency_list.hpp  io.cpp  io.hpp  iterator.hpp  log.cpp  log.hpp  logger.cpp  logger.hpp  string_collection.cpp  string_collection.hpp  timer.cpp  timer.hpp  type_util.cpp  type_util.hpp  vector2.hpp
source/util/graph/: digraph.hpp  matrix.hpp
src/: common.c  file_io.c  lang.c  lexer.c  main.c  parser.c  smap.c  stack.c  string_builder.c  text.c
tests/fail/: fail_1.mason  fail_10.mason  fail_11.mason  fail_2.mason  fail_3.mason  fail_4.mason  fail_5.mason  fail_6.mason  fail_7.mason  fail_8.mason  fail_9.mason
tests/mason/: test.mason
tests/pass/: pass_1.mason  pass_2.mason  pass_3.mason
tests_/fail/: fail_1.mason  fail_10.mason  fail_8.mason
tests_/mason/: test.mason
tests_/pass/: pass_1.mason  pass_2.mason
